<resources>
    <string name="app_name"><i>Flags Quiz</i></string>
    <string name="action_settings">Change settings</string>

    <string name="number_of_choices"><font color="#FFD700" size="18">Number of answers to choose from:</font></string>
    <string name="guess_country">What country is it?</string>
    <string name="image_description">Picture of the current flag</string>
    <string name="incorrect_answer">Wrong answer!</string>
    <string name="number_of_choices_description">2, 4, 6 or 8 choices</string>
    <string name="question">Question %1$d from %2$d</string>
    <string name="reset_quiz">Reset quiz</string>
    <string name="restarting_quiz">The quiz will restart with the selected choices</string>
    <string name="results">%1$d answers, %2$.02f%% correct answers</string>
    <string name="world_regions"><font color="#FFD700" size="18"><i>Regions</i></font></string>
    <string name="world_regions_descriptions">Change regions</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_info"><b>Choose the right flag out of</b> %1$s. The current selected region%2$s: %3$s. You can amend your options %4$s</string>
    <string name="warning_one_region">Please choose at least one region</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="close_app">Close App</string>
    <string name="close">Close</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="sure_to_terminate">Are you sure you want to terminate the quiz?</string>
    <string name="changing_settings_warning">Changing the settings will restart the quiz.</string>
    <string name="quiz_results">Quiz results</string>
    <string name="correct_answer_reply">Bravo, this is a flag of %1$s! \uD83D\uDC4F</string>
    <string name="welcome_text">Check your knowledge of worldwide flags!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="default_value_number">4</string>
    <string name="select_regions">Select regions:</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="oceania">Oceania</string>
    <string name="south_america">South America</string>
</resources>